添加了路由

--- a/frontend/src/assets/style/variable.less
+++ b/frontend/src/assets/style/variable.less
@@ -3,6 +3,9 @@
   position: absolute;
   content: '';
 }
+.empty{
+  padding: 0px 0px 0px 0px;
+}
 @transition-slow: .6s ease;
 @transition-normal: .4s ease;
 @transition-fast: .3s ease;
