--- a/frontend/src/assets/style/menu.css
+++ b/frontend/src/assets/style/menu.css
@@ -1,9 +1,11 @@
 .asidemenu {
+  background-color: transparent;
   width: 60px;
   display: flex;
   flex-direction: column;
 }
 .vertical-menu {
+  opacity: 0.4;
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -11,6 +13,7 @@
 .top-items {
   display: flex;
   flex-direction: column;
+  opacity: 0.5;
 }
 .menu_item {
   display: flex;
@@ -22,11 +25,13 @@
   display: flex;
   align-items: center;
   width: 100%;
+  opacity: 0.5;
 }
 .placeholder-item {
   flex-grow: 1;
 }
 .View {
+  opacity: 0.5;
   width: calc(100% - 60px);
   height: 100%;
   display: flex;
