--- a/frontend/src/assets/style/menu.less
+++ b/frontend/src/assets/style/menu.less
@@ -1,18 +1,21 @@
 .asidemenu{
+  background-color :transparent;
   width: 60px;
-  //height: calc(100vh - 48px);
   display: flex;
   flex-direction: column;
-  //justify-content: space-between;
 }
 .vertical-menu {
+  opacity: 0.4;
   display: flex;
+
   flex-direction: column;
   height: 100vh;
 }
 .top-items {
   display: flex;
   flex-direction: column;
+  opacity: 0.5;
+
 }
 .menu_item{
   display: flex;
@@ -24,11 +27,13 @@
   display: flex;
   align-items: center;
   width: 100%;
+  opacity: 0.5;
 }
 .placeholder-item {
   flex-grow: 1;
 }
 .View{
+  opacity: 0.5;
   width: calc(100% - 60px);
   height: 100%;
   display: flex;
