事件监听完成，任务队列有待完善

--- a/frontend/src/assets/style/menu.css
+++ b/frontend/src/assets/style/menu.css
@@ -14,6 +14,9 @@
   display: flex;
   flex-direction: column;
 }
+.item_icon {
+  color: #32CD99;
+}
 .menu_item {
   display: flex;
   align-items: center;
