--- a/frontend/src/assets/style/menu.less
+++ b/frontend/src/assets/style/menu.less
@@ -1,3 +1,4 @@
+@import "Color";
 .asidemenu{
   background-color :transparent;
   width: 60px;
@@ -14,7 +15,9 @@
 .top-items {
   display: flex;
   flex-direction: column;
-
+}
+.item_icon{
+  color: @aoi
 }
 .menu_item{
   display: flex;
