--- a/frontend/src/assets/style/variable.less
+++ b/frontend/src/assets/style/variable.less
@@ -6,6 +6,13 @@
 .empty{
   padding: @No_Gap;
 }
+.Half_light{
+  &::before {
+    background: #000000;
+    opacity: 0.3;
+  }
+  //opacity: 0.5;
+}
 .Main{
   height: calc(100vh);
   background: url(../images/bg.jpg) ;
