--- a/frontend/src/assets/style/variable.less
+++ b/frontend/src/assets/style/variable.less
@@ -34,6 +34,14 @@
 .Set_Roller{
   height:calc(100vh - 40px)
 }
+.Center{
+  text-align: center;
+}
+.Background_Opacity{
+  background-color: rgba(@light-gray,0.5);
+  margin: auto;
+  padding: 15px 15px 15px 15px;
+}
 .No_Background{
   background-color: rgba(ff,ff,ff,0.5);
   border: 2px solid @golden;
