--- a/frontend/src/assets/style/variable.less
+++ b/frontend/src/assets/style/variable.less
@@ -14,7 +14,8 @@
 }
 .Main{
   height: calc(100vh);
-  background: url(../images/bg.jpg) ;
+  // background: url(../images/bg.jpg) ;
+  background :#010304;
   margin :@No_Gap;
   background-size:cover;
   z-index: -1;
