fix setting bug & add gif download

--- a/frontend/src/assets/style/variable.less
+++ b/frontend/src/assets/style/variable.less
@@ -48,13 +48,20 @@
   border: 2px solid @golden;
 }
 
+/deep/ .Waitboard{
+  position: relative;
+  text-align: center;
+  width: 80%;
+  font-size: 24px;
+  height: 45px;
+}
 
-
-/deep/.Xbord {
+/deep/.Xboard {
   width: 80%;
   position: relative;
   text-align: center;
   font-size: 24px;
+  height: 45px;
   &::before {
     content: "";
     position: absolute;
