--- a/web/src/assets/style/Img.less
+++ b/web/src/assets/style/Img.less
@@ -1,9 +1,9 @@
-@MenuBackgroundColor: rgb(220, 223, 230)
+@MenuBackgroundColor: rgb(220, 223, 230);
 .headImg {
   border-radius: 50%;
   size:30px;
   border-right:1px solid ;
-  border-right-color: @MenuBackgroundColorMenuBackgroundColor;
+  border-right-color: @MenuBackgroundColor;
   background: white;
 }
 
