--- a/web/src/assets/style/common/loading.less
+++ b/web/src/assets/style/common/loading.less
@@ -57,7 +57,7 @@
   border: 2px solid #ffffff;
   border-top-color: transparent;
   border-radius: 100%;
-  //animation: circle infinite 0.75s linear;
+  animation: circle infinite 0.75s linear;
 }
 
 // 图片加载状态
