--- a/web/src/assets/style/menu.less
+++ b/web/src/assets/style/menu.less
@@ -9,7 +9,7 @@
 }
 
 .sidebar-container {
-  width: 150px;
+  width: 140px;
   background: rgba(30, 41, 59, 0.95);
   backdrop-filter: blur(20px);
   border-right: 1px solid rgba(148, 163, 184, 0.1);
@@ -118,6 +118,7 @@
       border: none;
 
       .nav-item {
+        padding: 0px 12px;
         margin-bottom: 8px;
         border-radius: 12px;
         transition: all 0.3s ease;
